# PROVE

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DELIVERABLES.md  DELIVERABLES_SYNTHESIS.md  README.md
crates/manufacturer-service/: Cargo.toml
crates/manufacturer-service/src/: main.rs
crates/supplier-service/: Cargo.toml
crates/supplier-service/src/: main.rs
crates/verifier-cli/: Cargo.toml
crates/verifier-cli/src/: main.rs
crates/zkp-core/: Cargo.toml
crates/zkp-core/src/: lib.rs  manufacturer_circuit.rs  prove.rs  serialization.rs  setup.rs  supplier_circuit.rs  types.rs
demo/scripts/: demo_forge.sh  demo_invalid_claim.sh  demo_manufacturer_fail.sh  demo_proof_swap.sh  demo_valid.sh
ui/: index.html
