[workspace]
resolver = "2"
members = [
    "crates/zkp-core",
    "crates/supplier-service",
    "crates/manufacturer-service",
    "crates/verifier-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Arkworks 0.5.0 coherent set
ark-ff                = "0.5"
ark-ec                = "0.5"
ark-poly              = "0.5"
ark-serialize         = { version = "0.5", features = ["derive"] }
ark-std               = "0.5"
ark-relations         = "0.5"
ark-r1cs-std          = "0.5"
ark-snark             = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["r1cs", "sponge", "snark"] }
ark-groth16           = { version = "0.5", default-features = false, features = ["r1cs", "parallel"] }
ark-bls12-377         = { version = "0.5", features = ["r1cs"] }
ark-bw6-761           = "0.5"

# Web
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bincode    = "1.3"

# CLI / UX
clap      = { version = "4", features = ["derive"] }
colored   = "2"
indicatif = "0.17"

# Misc
anyhow             = "1"
thiserror          = "1"
hex                = "0.4"
rand               = "0.8"
rand_chacha        = { version = "0.3" }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

zkp-core = { path = "crates/zkp-core" }

[profile.release]
opt-level = 3
lto = "thin"
