[package]
name = "supplier-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkp-core = { workspace = true }

axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

anyhow             = { workspace = true }
hex                = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
