[package]
name = "verifier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkp-core = { workspace = true }

clap      = { workspace = true }
colored   = { workspace = true }
indicatif = { workspace = true }

tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

anyhow  = { workspace = true }
hex     = { workspace = true }
rand    = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
