[package]
name = "zkp-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-ff                = { workspace = true }
ark-ec                = { workspace = true }
ark-serialize         = { workspace = true }
ark-std               = { workspace = true }
ark-relations         = { workspace = true }
ark-r1cs-std          = { workspace = true }
ark-snark             = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-groth16           = { workspace = true }
ark-bls12-377         = { workspace = true }
ark-bw6-761           = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
bincode    = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
hex       = { workspace = true }
rand      = { workspace = true }
rand_chacha = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
